--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,1 +1,14 @@
 // Here you can add other styles
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800');
+
+.font-ng {
+  font-family: 'Nanum Gothic', serif;
+}
+
+* {
+  font-family: 'Nanum Gothic', serif;
+}
+
+.invalid-form {
+  border-color: crimson;
+}
